--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,25 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/system_grey"
+    android:background="?attr/colorSurface"
     tools:context=".ui.home.HomeFragment">
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/categoriesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
-        android:layout_marginBottom="65dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:text="ldkddjdjd" />
-
-
-    </ScrollView>
+        android:padding="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_category_card" />
 
     <EditText
         android:id="@+id/inputField"
