--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,8 +9,17 @@
         android:id="@+id/navigation_home"
         android:name="com.example.wordsapp.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
 
+        <action
+            android:id="@+id/action_first_to_second"
+            app:destination="@id/navigation_category"
+            app:popUpTo="@id/navigation_home"
+            app:popUpToInclusive="false"
+            app:launchSingleTop="true" />
+    </fragment>
+
+    <!-- Остальные фрагменты без изменений -->
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.wordsapp.ui.dashboard.DashboardFragment"
@@ -22,4 +31,10 @@
         android:name="com.example.wordsapp.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+
+    <fragment
+        android:id="@+id/navigation_category"
+        android:name="com.example.wordsapp.ui.home.CategoryFragment"
+        android:label="@string/title_dashboard"
+        tools:layout="@layout/fragment_category" />
 </navigation>
