--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,4 +30,8 @@
         <item name="android:windowExitAnimation">@anim/dialog_exit</item>
     </style>
 
+    <style name="DialogStyle">
+        <item name="cornerRadius">8dp</item>
+    </style>
+
 </resources>
