--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -26,8 +26,9 @@
         <ImageView
             android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:padding="2dp"
-            android:src="@drawable/fire" />
+            android:padding="10dp"
+            android:src="@drawable/flame"
+/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -46,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
-                android:text="36"
+                android:text="0"
                 android:textColor="@color/purple_222"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -57,7 +58,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="180dp"
         android:layout_margin="6dp"
         android:background="#666666"
         android:orientation="horizontal"
@@ -68,6 +69,22 @@
         app:layout_constraintVertical_bias="0.028"
         tools:layout_editor_absoluteX="6dp">
 
+        <com.google.android.material.slider.Slider
+            android:id="@+id/discreteSlider"
+            android:layout_width="360dp"
+            android:layout_height="wrap_content"
+            android:valueFrom="1"
+            android:valueTo="4"
+            android:stepSize="1"
+            app:labelBehavior="visible"
+            app:tickVisible="true"
+            android:layout_gravity="center_horizontal"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginTop="40dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -100,12 +117,15 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="350dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="end"
+            android:layout_marginEnd="30dp"
+            >
 
             <TextView
+                android:id="@+id/allLearn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -128,7 +148,7 @@
                 android:textSize="18sp" />
 
         </LinearLayout>
-
+        </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
