--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -58,7 +58,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="150dp"
         android:layout_margin="6dp"
         android:background="#666666"
         android:orientation="horizontal"
@@ -69,22 +69,22 @@
         app:layout_constraintVertical_bias="0.028"
         tools:layout_editor_absoluteX="6dp">
 
-        <com.google.android.material.slider.Slider
-            android:id="@+id/discreteSlider"
-            android:layout_width="360dp"
-            android:layout_height="wrap_content"
-            android:valueFrom="1"
-            android:valueTo="4"
-            android:stepSize="1"
-            app:labelBehavior="visible"
-            app:tickVisible="true"
-            android:layout_gravity="center_horizontal"/>
+<!--        <com.google.android.material.slider.Slider-->
+<!--            android:id="@+id/discreteSlider"-->
+<!--            android:layout_width="360dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:valueFrom="1"-->
+<!--            android:valueTo="4"-->
+<!--            android:stepSize="1"-->
+<!--            app:labelBehavior="visible"-->
+<!--            app:tickVisible="true"-->
+<!--            android:layout_gravity="center_horizontal"/>-->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:layout_marginTop="40dp">
+            android:layout_marginTop="10dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -133,6 +133,7 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/addLearn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
