--- a/app/src/main/res/layout/item_word.xml
+++ b/app/src/main/res/layout/item_word.xml
@@ -13,20 +13,56 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="7dp"
+        android:layout_marginVertical="2dp"
         android:orientation="vertical">
-    <TextView
-        android:id="@+id/word_original"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginHorizontal="6dp"
-        android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/word_translate"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="6dp"
-        android:textSize="18sp"/>
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:id="@+id/word_original"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_marginHorizontal="5dp"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="-"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/word_translate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
+            android:textSize="20sp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/imageLearned"
+            android:layout_width="11dp"
+            android:layout_height="27dp"
+            android:layout_marginHorizontal="5dp"
+            android:src="@drawable/circle"/>
+
+        <TextView
+            android:id="@+id/word_indexLearning"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:textSize="16sp"
+            android:text="Не изучено"/>
+    </LinearLayout>
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
